/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Scala application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.12/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the scala Plugin to add support for Scala.
    id 'scala'

    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'

    // Apply the Shadow plugin to create a fat JAR.
    id 'com.github.johnrengelman.shadow' version '8.1.1'

    // Apply the base plugin
    id 'base'
}

// Define the source sets for Scala
sourceSets {
    main {
        scala {
            srcDirs = ['src/main/project1Scala']
        }
    }
}

// Define Scala and Spark versions at the top
ext.scalaVersion = '2.13.16'
ext.sparkVersion = '4.0.0'

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use Scala 2.13 in our library project
    implementation libs.scala.library

    // This dependency is used by the application.
    implementation libs.guava

    // Use Scalatest for testing our library
    testImplementation libs.junit
    testImplementation libs.scalatest.v2.v13
    testImplementation libs.junit.v4.v13.v2.v13

    // Need scala-xml at test runtime
    testRuntimeOnly libs.scala.xml.v2.v13

    // Add Databricks Connect dependency
    implementation 'com.databricks:databricks-connect_2.13:18.1.0'

    // Source: https://mvnrepository.com/artifact/org.playframework/play-json
    implementation "com.fasterxml.jackson.module:jackson-module-scala_2.13:2.15.2"
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'project1.Main'

    // Configure JVM options and enable forking
    applicationDefaultJvmArgs = ["--add-opens=java.base/java.nio=ALL-UNNAMED"]
}

shadowJar {
    archiveClassifier.set('all')
    mergeServiceFiles()
}

// Task to build Python wheel
task buildPythonWheel(type: Exec) {
    workingDir "${projectDir}/src/main"
    commandLine "python", "setup.py", "bdist_wheel"
}

// Ensure the Python wheel is built as part of the build lifecycle
tasks.build.dependsOn(buildPythonWheel)
tasks.shadowJar.dependsOn(buildPythonWheel)
